Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur fuga asperiores quod labore magnam atque, provident, praesentium iusto sapiente id nobis. Quaerat, possimus? Fugit voluptatem dignissimos molestias soluta reprehenderit ratione?</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis eaque dolorum ipsa cum facere expedita accusamus vero eius libero, beatae, possimus alias natus esse quo repudiandae dolorem dolores maxime nesciunt?</p>
 </body>
 </html>
